--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@ body{
     padding-bottom : 50px;
 }
 
-.app-title{
+.city{
     width: 300px;
     height: 50px;
     border-radius: 10px 10px 0 0;
 }
 
-.app-title p{
+.city p{
     text-align: center;
     padding: 15px;
     margin: 0 auto;
