--- a/style.css
+++ b/style.css
@@ -78,14 +78,14 @@ body {
     cursor: pointer;
 }
 
-.temperature-value p:hover {}
+/* .temperature-value p:hover {} */
 
 .temperature-value span {
     color: #293251;
     font-size: 0.5em;
 }
 
-.temperature-description {}
+/* .temperature-description {} */
 
 .temperature-description p {
     padding: 8px;
@@ -95,7 +95,7 @@ body {
     font-size: 1.2em;
 }
 
-.location {}
+/* .location {} */
 
 .location p {
     margin: 0;
