--- a/style.css
+++ b/style.css
@@ -6,6 +6,27 @@ body {
     background-color: #293251;
 }
 
+h1, h3 {
+    text-align: center;
+    color: #FFF;
+}
+
+.search {
+    display: flex;
+    justify-content:space-around;
+    flex-wrap: wrap;
+    text-align: center;
+}
+.search input {
+    font-size: 1.5em;
+    margin: 15px 0;
+    width: 300px;
+    height: 30px;
+    border-radius: 8px;
+    border: none;
+    padding: 5px 10px;
+}
+
 #cards {
     display: flex;
     justify-content: space-around;
